--- a/generators/app/templates/src/templates/index.jade
+++ b/generators/app/templates/src/templates/index.jade
@@ -17,4 +17,4 @@ html(lang="en")
     footer= project.banner
     script(type="text/javascript" src="./scripts/#{project.name}.min.js")
     script(type="text/javascript").
-      #{project.mainClass}('#example1');
+      #{project.namespace}('#example1');
